monitoring/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: grafana/grafana
        name: grafana
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-volume
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-volume
        persistentVolumeClaim:
          claimName: grafana-claim
