monitoring/grafana/service.yml
kind: Service
apiVersion: v1
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - name: grafanaui
      protocol: TCP
      port: 3000
      targetPort: 3000
