monitoring/grafana/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
    - host: "grafana.tarbahome.me"
      http:
        paths:
          - backend:
              serviceName: grafana-service
              servicePort: grafanaui
